# breakthrough

./: .clang-format  .gitmodules  .projectile  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: asseration.hpp  audio-buffer.hpp  audio-master.hpp  audio-source.hpp  ball-object.hpp  framebuffer.hpp  freetype.hpp  game-level.hpp  game-object.hpp  game.hpp  log.hpp  open-al.hpp  opengl-util.hpp  particle-generator.hpp  post-processor.hpp  power-up.hpp  renderbuffer.hpp  renderer.hpp  resource-manager.hpp  shader.hpp  sprite-renderer.hpp  text-renderer.hpp  texture.hpp  vertex-array.hpp  vertex-buffer-layout.hpp  vertex-buffer.hpp  wav-loader.hpp  window.hpp
resources/shaders/particle/: particle.frag  particle.vert
resources/shaders/post-processing/: post-processing.frag  post-processing.vert
resources/shaders/sprite/: sprite.frag  sprite.vert
resources/shaders/text/: text.frag  text.vert
src/: CMakeLists.txt  asseration.cpp  audio-buffer.cpp  audio-master.cpp  audio-source.cpp  ball-object.cpp  framebuffer.cpp  game-level.cpp  game-object.cpp  game.cpp  log.cpp  open-al.cpp  opengl-util.cpp  particle-generator.cpp  post-processor.cpp  renderbuffer.cpp  renderer.cpp  resource-manager.cpp  shader.cpp  sprite-renderer.cpp  text-renderer.cpp  texture.cpp  vertex-array.cpp  vertex-buffer-layout.cpp  vertex-buffer.cpp  wav-loader.cpp  window.cpp
